<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="dsv_ex_msg_dont_set_lm">You should not set LayoutManager on DiscreteScrollView.class instance. Library uses a special one. Just don\'t call the method.</string>
    <string name="dsv_ex_msg_adapter_wrong_recycler">InfiniteScrollAdapter is supposed to work only with DiscreteScrollView</string>
    <string name="txt_radio_btn_user">个人中心</string>
    <string name="txt_radio_living">直播</string>
    <string name="txt_radio_follow">关注</string>
    <string name="live_quality_fps_and_bitrate">;&#160;帧率:<xliff:g id="fps">%1$.2f</xliff:g>;&#160;比特率:<xliff:g id="bitrate">%2$.2f</xliff:g>Kb/s</string>
    <string name="live_quality">当前质量:&#160;<xliff:g id="value">%1$s</xliff:g></string>
    <string name="loading_text">正在加载中...</string>
    <string name="tab_follow_title">关注</string>
    <string name="tab_person_title">个人中心</string>
    <string name="login">登录</string>
    <string name="watch_history_title">历史记录</string>
    <string name="is_playing">正在直播</string>
    <string name="not_playing">未开播</string>
    <string name="anchor_not_playing">主播暂未开播</string>
    <string name="theme_room_not_playing">主题房暂未开播</string>
    <string name="live_end">直播结束</string>
    <string name="recommend_more_anchor">为您推荐更多精彩直播</string>
    <string name="change_recommend">换一换</string>
    <string name="user_count">%d人</string>
    <string name="live_room_id">ID:</string>
    <string name="live_room_pretty_id">靓号：</string>
    <string name="follow_is_null">还没有关注主播哦\n快去热门看看</string>
    <string name="guard_is_null">还没有守护主播哦\n快去热门看看</string>
    <string name="manager_is_null">没有主播给你管理哦\n快去热门看看</string>
    <string name="watch_is_null">还没有看过主播哦\n快去热门看看</string>
    <string name="badge_is_null">您还没有勋章哦\n多多参加官方的活动吧</string>
    <string name="store_is_null">暂无靓号!</string>
    <string name="store_meng_is_null">暂无商品!</string>
    <string name="watch_history_is_null">您还没有历史观看记录喔~</string>
    <string name="good_number_is_null">您还没有靓号哦，去商城看看吧</string>
    <string name="videos_is_null">您还没有上传过视频哦，赶快去试试吧~!</string>
    <string name="dynamic_is_null">您还没有上传过动态哦，赶快去试试吧~!</string>
    <string name="square_dynamic_is_null">暂无动态~!</string>
    <string name="message_list_is_null">暂无系统通知</string>
    <string name="act_list_is_null">暂无活动</string>
    <string name="help_is_null">暂无热门问题</string>
    <string name="proclamation_is_null">暂无公告通知</string>
    <string name="today_fans_is_null">无人上榜</string>
    <string name="wish_card_is_null">还没有人上榜</string>
    <string name="default_msg">暂无内容~!</string>
    <string name="data_is_null">暂无数据</string>
    <string name="network_exception">网络加载失败，点击重试</string>
    <string name="data_exception">数据异常，请稍后重试~!</string>
    <string name="not_install_wx">您还未安装微信客户端!</string>
    <string name="not_open_wx_share">无法打开微信分享!</string>
    <string name="copy_complete">复制完成</string>
    <string name="account_info">%1$s(%2$s)</string>
    <string name="mengdou_count">%d 萌豆</string>
    <string name="loading_message">正在加载中</string>
    <string name="remain_time">剩余时间</string>
    <string name="poll">票数:</string>
    <string name="ranking">排名：</string>
    <string name="integral">积分:</string>
    <string name="txt_payinfo_under_confirm">支付结果确认中</string>
    <string name="please_wait">请稍后...</string>
    <string name="query_order_info">正在获取订单信息</string>
    <string name="recharge_center">充值中心</string>
    <string name="plz_choose_recharge_count">请选择充值面额</string>
    <string name="net_is_down">网络已断开</string>
    <string name="not_login">您还未登录</string>
    <string name="pay_success">充值成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_repetition">重复请求</string>
    <string name="sure">确定</string>
    <string name="save_text">保存</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="introduce_hint">无个性 不签名</string>
    <string name="personal_info">个人资料</string>
    <string name="tips">提示</string>
    <string name="pay_cancel">您已取消支付</string>
    <string name="user_id_name">%1$d-%2$s</string>
    <string name="weixin_version_is_low">微信版本过低，请先升级</string>
    <string name="weixin_isnot_installed">您未安装微信，请先下载微信</string>
    <string name="online_user_count">在线%1$d人(%2$d游客)</string>
    <string name="subscribe">关注</string>
    <string name="unsubscribe">已关注</string>
    <string name="unsubscribe_notice">取消关注将不再收到主播的开播通知</string>
    <string name="subscribe_success">关注成功</string>
    <string name="unsubscribe_success">取消关注成功</string>
    <string name="is_highest_level">您已升到顶级</string>
    <string name="gettable">可领取</string>
    <string name="get_all_git">恭喜已完成今日“看直播 领选票”，明天继续加油喔~</string>
    <string name="month_pk_login_attention">启禀圣上</string>
    <string name="month_pk_login_cancel">朕不要</string>
    <string name="month_pk_attention">选票已发放，可以在活动比赛中赠送给自己喜欢的主播，登录后即可领取喔</string>
    <string name="login_just">立即登录</string>
    <string name="attention_first_get_free_gift">启禀圣上，选票已发放，可以在礼物面板赏给恩宠的爱妃喔</string>
    <string name="tickets_not_enouch">选票数量不足，观看直播就可以获得选票喔</string>
    <string name="month_pk_stop">当前暂无赛事，选票功能自动关闭，赛事开启后，将自动开放！</string>
    <string name="answer_login_attention">答题将在2分钟后开始，登录才能参与答题喔，快去登录吧</string>
    <string name="answer_login_just">马上登录</string>
    <string name="no_recommend_attention">主播正在赶来的路上…</string>
    <string name="system_error">系统出现了异常</string>
    <string name="join_chat_room_fail">未能进入直播间,\n您可以稍后重试</string>
    <string name="connect_pk_fail">发起PK失败，稍后再试</string>
    <string name="connect_pk_cancel">PK已取消</string>
    <string name="connect_pk_timeout">创建PK超时</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开立即刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新数据中</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉可以加载</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">松开立即加载</string>
    <string name="pull_to_refresh_from_bottom_release_label">正在加载数据中</string>
    <string name="leak_canary_display_activity_label">Leaks</string>
    <string name="exchange_success">兑换成功</string>
    <string name="dayly_vote">每日选票任务</string>
    <string name="take_vote_bt_watch">看直播 领选票</string>
    <string name="vote_rule">每观看直播10分钟即可获得选票（系统自动发放），贵族等级越高可获得选票越多喔，</string>
    <string name="qq_login">QQ登录</string>
    <string name="phone_login">手机快捷登录</string>
    <string name="code_error">验证码错误或已失效</string>
    <string name="phone_error">请输入正确的手机号</string>
    <string name="send_code_success">验证码已发送</string>
    <string name="register_and">和</string>
    <string name="register_phone_hint">请输入手机号</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_account_hint">请输入主播账号</string>
    <string name="register_psd">请输入密码</string>
    <string name="no_user">暂无普通观众显示，请下拉刷新</string>
    <string name="no_roommgr">暂无房管</string>
    <string name="no_room_important">暂无贵宾</string>
    <string-array name="filter_type">
        <item>无滤镜</item>
        <item>粉嫩</item>
        <item>怀旧</item>
        <item>蓝调</item>
        <item>浪漫</item>
        <item>美白</item>
        <item>清凉</item>
        <item>清新</item>
        <item>日系</item>
        <item>唯美</item>
    </string-array>
    <string name="online_end_text">只显示当前在线前100名玩家</string>
    <string name="share">分享</string>
    <string name="clear_screen">清屏</string>
    <string name="share_liveroom">分享直播间到</string>
    <string name="full_screen">全屏播放</string>
    <string name="exit_full_screen">退出全屏</string>
    <string name="start_publish">开始直播</string>
    <string name="stop">结束</string>
    <string name="load_music">载入音乐</string>
    <string name="accompany">伴奏</string>
    <string name="full">横屏</string>
    <string name="stand">竖屏</string>
    <string name="voice">人声</string>
    <string name="beauty">美颜</string>
    <string name="white">美白</string>
    <string name="rotation">反转</string>
    <string name="flashlight_on">闪光灯开</string>
    <string name="flashlight_off">闪光灯关</string>
    <string name="mirror_on">镜像开</string>
    <string name="mirror_off">镜像关</string>
    <string name="microphone_on">麦克风开</string>
    <string name="microphone_off">麦克风关</string>
    <string name="standardDefinition">标清</string>
    <string name="highlyDefinition">高清</string>
    <string name="contact_each_other">连麦</string>
    <string name="close_room">关闭直播间</string>
    <string name="definition">清晰度:</string>
    <string name="frame_ratio">帧率:</string>
    <string name="byte_ratio">码率:</string>
    <string name="live_over">本次直播已结束</string>
    <string name="publish_disconnect">推流中断，请重新推流</string>
    <string name="publish_fail">推流失败，请重新推流</string>
    <string name="network_error_login_room_fail">网络异常，进入直播间失败</string>
    <string name="publish_pattern">开播模式</string>
    <string name="pk_create_tab">发起PK</string>
    <string name="pk_my_record">我的战绩</string>
    <string name="pk_invite">PK邀请</string>
    <string name="pk_create">创建PK,并邀请PK</string>
    <string name="pk_refuse">残忍拒绝</string>
    <string name="pk_agree">同意</string>
    <string name="no_pk_data">暂无PK数据哦~</string>
    <string name="pk_title">羚萌PK</string>
    <string name="hang_pk">结束PK</string>
    <string name="pk_progress">正在PK</string>
    <string name="setting_pk_time">设置时长</string>
    <string name="at_least_one_pk">至少邀请一名主播PK</string>
    <string name="lack_pk_duration">缺少PK时间</string>
    <string name="connect_pk_success">发起PK成功，即将开始</string>
    <string name="finish_pk_attention">PK结果公布后才能结束PK</string>
    <string name="apply_anchor_account">请输入直播账号</string>
    <string name="apply_anchor_password">请输入密码</string>
    <string name="apply_anchor">提交申请</string>
    <string name="not_enable_send_message_to_yourself">不能给自己发消息</string>
    <string name="join_chatroom_failed">加入聊天服务器失败,请稍后再试</string>
    <string name="manager_user_attention">管理用户</string>
    <string name="mute">禁言</string>
    <string name="gag">踢出</string>
    <string name="black_house">7日小黑屋</string>
    <string name="manager_house">升为房管</string>
    <string name="repeal_manager_house">撤销房管</string>
    <string name="private_chat">与%s 聊天中...</string>
    <string name="pk_canceled">%s已取消PK</string>
    <string name="pk_accepted">%s已接受了PK邀请</string>
    <string name="pk_rejected">%s已拒绝PK邀请</string>
    <string name="pk_timeout">%s发起的PK已超时</string>
    <string name="you">你</string>
    <string name="pk_inviting">%s邀请你参加PK</string>
    <string name="reject">拒绝</string>
    <string name="reminder">提示</string>
    <string name="resurgence_card">复活卡</string>
    <string name="total_time">累积答题时间</string>
    <string name="set_question">开始出题</string>
    <string name="question_end">出题结束</string>
    <string name="set_answer">公布答案</string>
    <string name="question_start_failed">出题失败，请勿再次点击出题按钮，请联系程序猿加紧抢修！</string>
    <string name="question_start_success">出题成功！</string>
    <string name="question_message">确认准备出题？确认后，将会在120秒倒计时后可点击开始出题</string>
    <string name="ready_question">准备出题</string>
    <string name="question_next_failed">出题失败，请稍后再试！</string>
    <string name="answer_resurgence">本题目回答错误\n已自动为您复活</string>
    <string name="jump_ad">%1$d 跳过</string>
    <string name="question_endl">答题已结束，快去查看获奖名单吧！</string>
    <string name="question_pass">恭喜你已完成全部答题，快去查看获奖名单吧！</string>
    <string name="watch_award_list">查看获奖名单</string>
    <string name="param_error">答题状态错误</string>
    <string name="pool_time">超级福弹\n剩余时间</string>
    <string name="network_unenable">网络连接错误\n试试看刷新页面或检查网络连接</string>
    <string name="register_rule_pravicy">《隐私政策》</string>
    <string name="agreement">协议</string>
    <string name="register_rule_02">《服务协议》</string>
    <string name="register_rule_01_fragment">登录即视为同意</string>
    <string name="phone_number_fast_login">手机快捷登录</string>
</resources>