<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/con"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="0px"
        android:layout_height="0px"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barrier" />


    <View
        android:id="@+id/view_weixin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/shape_round_green_60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/tv_wx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/login_weichat"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/view_weixin"
        app:layout_constraintLeft_toLeftOf="@id/view_weixin"
        app:layout_constraintRight_toRightOf="@id/view_weixin"
        app:layout_constraintTop_toTopOf="@id/view_weixin" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_information"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginBottom="270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="gone">

        <TextView
            android:id="@+id/tv_phone_code"
            android:layout_width="0px"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/sel_enable_and_unable"
            android:gravity="center"
            android:text="获取短信验证码"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_phone_number"
            android:layout_width="0px"
            android:layout_height="54dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@id/tv_phone_code"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tv_formar"
                android:layout_width="wrap_content"
                android:layout_height="0px"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:text="+86"
                android:textColor="@color/black_333"
                android:textSize="@dimen/sp_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_line"
                android:layout_width="1dp"
                android:layout_height="12dp"
                android:background="@color/black_333"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_formar"
                app:layout_constraintRight_toLeftOf="@+id/phone_num"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/phone_num"
                android:layout_width="0px"
                android:layout_height="0px"
                android:layout_marginLeft="87dp"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="请输入手机号"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:padding="@dimen/dimen_4"
                android:textColor="@color/black_333"
                android:textColorHint="@color/black_999"
                android:textSize="@dimen/sp_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="18616746675" />

            <ImageView
                android:id="@+id/phone_num_clear"
                android:layout_width="wrap_content"
                android:layout_height="0px"
                android:layout_marginRight="22dp"
                android:paddingLeft="10dp"
                android:src="@mipmap/icon_close_round_01"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/phone_num"
                app:layout_constraintRight_toRightOf="@id/phone_num"
                app:layout_constraintTop_toTopOf="@id/phone_num" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/iv_title"
            android:layout_width="208dp"
            android:layout_height="44dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/slogan_login"
            app:layout_constraintBottom_toTopOf="@id/con_phone_number"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_code"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginBottom="270dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="0px"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/sel_enable_and_unable"
            android:gravity="center"
            android:text="重新获取"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.julun.huanque.widget.PasswordView
            android:id="@+id/password_view"
            android:layout_width="0px"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            app:borderColor="@color/text_enable"
            app:cipherEnable="false"
            app:cursorColor="@color/text_enable"
            app:errorBorderColor="#F03E3E"
            app:fullBorderColor="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_resend"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:passwordLength="4"
            app:textColor="@color/black_333" />

        <TextView
            android:id="@+id/tv_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="28dp"
            android:drawableLeft="@mipmap/icon_back_login_code"
            android:drawablePadding="8dp"
            android:text="输入4位验证码"
            android:textColor="@color/black_333"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/password_view"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/black_999"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toTopOf="@id/password_view"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="已发送到：19838967387" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_rule_01_fragment"
        android:textColor="@color/black_999"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_rule"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/register_rule" />

    <TextView
        android:id="@+id/register_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/register_rule_02"
        android:textColor="@color/black_666"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintRight_toLeftOf="@+id/tv_and"
        app:layout_goneMarginBottom="20dp" />

    <TextView
        android:id="@+id/tv_and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_and"
        android:textColor="@color/black_999"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_rule"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/register_rule"
        app:layout_constraintRight_toLeftOf="@+id/tv_register_privacy" />

    <TextView
        android:id="@+id/tv_register_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_rule_pravicy"
        android:textColor="@color/black_666"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_rule"
        app:layout_constraintLeft_toRightOf="@+id/tv_and"
        app:layout_constraintRight_toLeftOf="@+id/tv_agreement" />

    <TextView
        android:id="@+id/tv_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agreement"
        android:textColor="@color/black_333"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/register_rule"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toRightOf="@id/tv_register_privacy"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="con_information,con_code" />


    <View
        android:layout_width="0px"
        android:layout_height="190dp"
        android:background="@drawable/bg_login_transparent"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
